tests/toylang/neg/001609_mutation.toylang
program a = { while a do a sleep; } .
